--- a/applab.config.json
+++ b/applab.config.json
@@ -6,7 +6,7 @@
       "buildTypes": true,
       "bundle": true,
       "codeSplitting": true,
-      "excludeLibs": ["chalk", "nanoid"],
+      "excludeLibs": ["axios", "chalk", "nanoid"],
       "define": {},
       "format": "esm",
       "inputScripts": ["src/index.ts"],
@@ -22,7 +22,7 @@
       "buildDir": "dist",
       "buildFile": "index.cjs.js",
       "bundle": true,
-      "excludeLibs": ["chalk", "nanoid"],
+      "excludeLibs": ["axios", "chalk", "nanoid"],
       "define": {},
       "format": "cjs",
       "inputScripts": ["src/index.ts"],
